--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
 PORT=8080
 EXPIRY_TIME=2d
 SECRET="hgdhd-38-KIHD-nghsdghsf-ggsvgggsgf-387jgsfgfgs-,hjhkjhjkg"
-CORS=http://localhost:3000
+CORS="http://localhost:3000"
 
-DB_URL="mongodb://naresh:CVVwWgQHza00qBzm@cluster0.jqytyqy.mongodb.net/task_management?ssl=true"
+# DB_URL="mongodb://naresh:CVVwWgQHza00qBzm@cluster0.jqytyqy.mongodb.net/task_management?ssl=true"
 
 
 
-# DB_URL="mongodb+srv://naresh:8TSa1Ah3jgvIBvyK@cluster0.jqytyqy.mongodb.net/?appName=Cluster0"
+DB_URL="mongodb://localhost:27017/to-do"
